# AI-Engineer-Assignment

ai-engineer-assignment/: .coverage  .gitignore  Makefile  README.md  coverage.xml  graph_structure.md  nginx.conf  pyproject.toml  requirements.txt
ai-engineer-assignment/faiss_index/: index.faiss  index.pkl
ai-engineer-assignment/scripts/: start-dev.bat  start-dev.sh
ai-engineer-assignment/src/: __init__.py  app.py  config.py  data_loader.py  embeddings.py  langgraph_engine.py  llm_wrappers.py  rag_chain.py  vectorstore.py  weather.py
ai-engineer-assignment/tests/: __init__.py  conftest.py  test_langgraph.py  test_rag.py  test_vectorstore.py  test_weather.py
